# Automation_Board_Development

./: .gitignore  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Application_STM32.language.settings.xml  Bootloader_STM32.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Application_STM32/: .cproject  .project  Application_STM32.ioc  CMakeLists.txt  STM32F103C8TX_FLASH.ld
Application_STM32/Debug/: Application_STM32.elf  Application_STM32.list  Application_STM32.map  makefile  sources.mk
Application_STM32/Tests/: Makefile  main.cpp
Bootloader_STM32/: .cproject  .mxproject  .project  Bootloader_STM32 Debug.launch  Bootloader_STM32.ioc  Bootloader_STM32.launch  CMakeLists.txt  STM32F103C8TX_FLASH.ld  STM32F103XX_FLASH.ld
Bootloader_STM32/Debug/: Bootloader_STM32.elf  Bootloader_STM32.hex  Bootloader_STM32.list  Bootloader_STM32.map  makefile  objects.list  sources.mk
Bootloader_STM32/Tests/: Makefile  main.cpp
ESP32C3/: tool_set_config.json
ESP32C3/.metadata/: version.ini
ESP32C3/BootloaderHost/: .cproject  .project
ESP32C3/BootloaderHost/main/: BootloaderHost.c  CMakeLists.txt
ESP32C3/ESP32C3/: .cproject  .project  CMakeLists.txt
ESP32C3/src/: main.cpp
Test/Bootloader_ESP32/: Makefile
Test/Bootloader_STM32/: Makefile
UML/: GetCommandDiagram.mdj
Unity/src/: unity_color.h
(+138 files in other folders)
